--- a/getData.Rmd
+++ b/getData.Rmd
@@ -77,7 +77,7 @@ for (i in 1:5) { #change nums here
   topTracks$artist.name <- topTracks$tracks.track.artist$name
   topTracks$artist.mbid <- topTracks$tracks.track.artist$mbid
   topTracks$artist.url <- topTracks$tracks.track.artist$url
-  topTracks <- topTracks[, c(1, 2, 3, 4, 6, 10, 11, 12, 13, 14, 15, 16)]
+  topTracks <- topTracks[, c(1, 2, 4, 10, 11, 12, 13, 14, 15, 16)]
 
   tracksRussian <- bind_rows(tracksRussian, topTracks)
 }
